occaz-front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: occaz-frontend
spec:
  ports:
    - nodePort: 31280
      port: 4200
      protocol: TCP
      targetPort: 4200
  selector:
    app: occaz-frontend
  type: NodePort
